# ocs2

.github/workflows/: ros-build-test.yml
ocs2_msgs/: CMakeLists.txt
ocs2_msgs/msg/: raisim_PD_timeStampAndJoints.msg
ocs2_pinocchio/ocs2_centroidal_model/: CMakeLists.txt
ocs2_pinocchio/ocs2_pinocchio_interface/: CMakeLists.txt
ocs2_pinocchio/ocs2_self_collision/: CMakeLists.txt
ocs2_pinocchio/ocs2_self_collision_visualization/: CMakeLists.txt
ocs2_raisim/ocs2_raisim/: CMakeLists.txt  package.xml
ocs2_raisim/ocs2_raisim/src/: raisim_PDOnly.cpp  raisim_PDOnly_tele.cpp  raisim_test.cpp
ocs2_robotic_examples/ocs2_legged_robot/: CMakeLists.txt
ocs2_robotic_examples/ocs2_legged_robot/include/ocs2_legged_robot/visualization/: LeggedRobotVisualizer.h
ocs2_robotic_examples/ocs2_legged_robot/src/visualization/: LeggedRobotVisualizer.cpp
